# bibliometrics

./: .bibliometrics.config.json  .bibliometrics.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  bibliometrics.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  pypi-publish.yml
src/: TextLength.py  bibliometrics.py
src/bibliometrics/: __init__.py  __main__.py  bibliometrics.py  calculator.py  text_length.py
tests/: integration.py  testcase.html  tests.py
